--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <h2 class="text-xl font-semibold text-gray-800 mb-4 dark:text-white">Productos</h2>
       <h2 class="text-xl font-semibold text-gray-800 mb-4 dark:text-white">Listado de Productos</h2>
       <div class="mb-4">
-        <input type="text" id="filtroProductos" placeholder="Buscar productos..."
+        <input type="text" id="filtroProductosVista" placeholder="Buscar productos..."
           class="w-full p-2 border border-gray-300 rounded dark:bg-gray-700 dark:text-white" />
       </div>
       <div id="contenedorProductos" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
