--- a/index.html
+++ b/index.html
@@ -106,6 +106,21 @@
           </div>
           <p class="mt-4 text-lg font-bold dark:text-white">Total: $<span id="totalCompra">0</span></p>
 
+          <div class="mb-4 mt-4">
+            <label for="metodoPago" class="block text-sm font-medium text-gray-700 dark:text-gray-200 mb-1">
+              Método de pago
+            </label>
+            <select id="metodoPago" name="metodoPago" required
+              class="w-full px-3 py-2 rounded-xl border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-200 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400 transition duration-200">
+              <option value="">Seleccioná método de pago</option>
+              <option value="efectivo">Efectivo</option>
+              <option value="transferencia">Transferencia</option>
+              <option value="qr">QR</option>
+              <!-- Agregá los métodos que quieras -->
+            </select>
+          </div>
+
+
           <button type="submit" class="mt-4 bg-green-500 text-white px-4 py-2 rounded-2xl dark:hover:bg-green-600">
             Confirmar Venta
           </button>
@@ -212,7 +227,7 @@
         <input type="text" id="filtroProductosVista" placeholder="Buscar productos..."
           class="w-full p-2 border border-gray-300 rounded dark:bg-gray-700 dark:text-white" />
       </div>
-      
+
       <div class="flex justify-end mb-4">
         <button id="btnAgregarProducto"
           class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-2xl">
