--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/styles.css">
   <title>Caja Plus - Panel</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -14,6 +15,42 @@
 </head>
 
 <body class="flex h-screen bg-gray-100 dark:bg-gray-900">
+  <!-- Topbar Navbar -->
+  <nav id="topbar"
+    class="w-full flex items-center justify-between px-6 py-5 bg-white dark:bg-gray-900 shadow-md fixed top-0 left-0 z-50 h-16">
+    <!-- Logo o nombre de app -->
+    <div class="flex items-center gap-2">
+      <span class="text-xl font-bold text-blue-700 dark:text-blue-300">Caja Plus</span>
+    </div>
+
+    <div class="flex items-center gap-6">
+      <!-- Usuario logueado -->
+      <div id="userInfo" class="flex items-center gap-2 text-gray-600 dark:text-gray-200">
+        <svg class="w-6 h-6 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path d="M12 12c2.67 0 8 1.34 8 4v4H4v-4c0-2.66 5.33-4 8-4z" />
+          <circle cx="12" cy="7" r="4" />
+        </svg>
+        <span id="userName" class="font-semibold"></span>
+      </div>
+      <!-- Botón modo oscuro -->
+
+      <!-- Switch modo oscuro/claro -->
+      <label class="ui-switch" title="Cambiar tema">
+        <input type="checkbox" id="themeSwitch">
+        <div class="slider">
+          <div class="circle"></div>
+        </div>
+      </label>
+
+      <!-- Botón cerrar sesión -->
+      <button id="logoutBtn"
+        class="px-3 py-2 bg-red-500 hover:bg-red-600 text-white rounded-xl font-medium transition">Cerrar
+        sesión</button>
+    </div>
+  </nav>
+  <!-- Espaciador para que el contenido no quede tapado -->
+  <div class="h-16"></div>
+
   <!-- Sidebar -->
   <aside class="w-64 bg-white shadow-lg p-4 flex flex-col justify-between dark:bg-gray-800 ">
     <div>
@@ -24,13 +61,13 @@
           onclick="showSection('inicio')">Inicio</button>
         <button
           class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded dark:hover:bg-gray-700 dark:text-gray-100"
+          onclick="showSection('caja')">Caja</button>
+        <button
+          class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded dark:hover:bg-gray-700 dark:text-gray-100"
           onclick="showSection('nuevaVenta')">Nueva Venta</button>
         <button
           class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded dark:hover:bg-gray-700 dark:text-gray-100"
           onclick="showSection('pagos')">Pagos</button>
-        <button
-          class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded dark:hover:bg-gray-700 dark:text-gray-100"
-          onclick="showSection('caja')">Caja</button>
         <button
           class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded dark:hover:bg-gray-700 dark:text-gray-100"
           onclick="showSection('productos')">Productos</button>
@@ -40,12 +77,6 @@
         <button
           class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded dark:hover:bg-gray-700 dark:text-gray-100"
           onclick="showSection('calculadora')">Calculadora de Precios</button>
-        <button
-          class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded dark:hover:bg-gray-700 dark:text-gray-100"
-          onclick="modoOscuro()">Modo Claro/Oscuro</button>
-        <button
-          class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded dark:hover:bg-gray-700 dark:text-gray-100"
-          onclick="cerrarSesion()">Cerrar Sesion</button>
       </nav>
     </div>
     <footer class="text-sm text-gray-400">&copy; 2025 Caja Plus</footer>
