--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
       <input id="filtroProductos" type="text" placeholder="Buscar productos..."
         class="mb-4 p-2 border rounded-2xl w-full dark:bg-gray-700" />
       <form id="ventaForm" class="flex gap-6 flex-col lg:flex-row">
-        <div id="productosContainer" class="flex flex-wrap gap-4 w-full lg:w-3/4"></div>
+        <div id="productosContainer" class="flex flex-wrap gap-4 w-full lg:w-3/4"></div> 
+        
 
         <!-- Derecha: Productos seleccionados -->
         <div class="w-full lg:w-1/3">
@@ -159,6 +160,7 @@
       </form>
       <!-- Mensaje de éxito o error -->
       <div id="mensaje" class="mt-6 text-center font-medium dark:text-white"></div>
+      <div id="paginadorProductosVenta" class="flex justify-center mt-4"></div>
     </section>
 
     <!-- PAGOS -->
@@ -250,7 +252,7 @@
       </div>
     </section>
 
-    <!-- PRODUCTOS -->
+    <!-- SECCION PRODUCTOS -->
     <section id="productos" class="hidden">
       <h2 class="text-xl font-semibold text-gray-800 mb-4 dark:text-white">Productos</h2>
       <h2 class="text-xl font-semibold text-gray-800 mb-4 dark:text-white">Listado de Productos</h2>
@@ -268,6 +270,8 @@
 
       <div id="contenedorProductos" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
       </div>
+      <div id="paginadorProductosVista" class="flex justify-center mt-4"></div>
+
     </section>
     <!-- CALCULADORA DE PRECIO -->
     <section id="calculadora" class="hidden">
