--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
           <h3 class="text-lg font-semibold mb-2 dark:text-white">Productos seleccionados</h3>
           <div id="productosSeleccionados"
-            class="flex flex-col  max-h-[400px]  border rounded p-2 dark:bg-gray-800 dark:border-gray-700 overflow-y-auto dark:text-white">
+            class="flex flex-col max-h-[400px] border rounded-2xl bg-white dark:bg-gray-800 dark:border-gray-700 p-4 shadow-md overflow-y-auto dark:text-white">
             <!-- Aquí se mostrarán los productos seleccionados -->
           </div>
           <p class="mt-4 text-lg font-bold dark:text-white">Total: $<span id="totalCompra">0</span></p>
